--- a/catppuccin-mocha-teal.css
+++ b/catppuccin-mocha-teal.css
@@ -164,3 +164,7 @@ a:visited:hover {
 legend, fieldset, div.dispatchlist, .odd, ul.factbooklist, div.dispatch, .newrinfbubble .newmainlinebubblebottom, .newmyregionbubble .newmainlinebubblebottom, .newmainlinebubbletop, div.nationsummarybox, .policybox, .inner, .topic-actions {
     background: #313244 !important;
 }
+
+.signature {
+  border-color: #ccc;
+}
