--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,6 +1,7 @@
 /* ==UserStyle ==
 @name            Mod Dark
 @version         0.01
+@namespace       https://github.com/octocat
 @description     Modified dark mode nationstates
 @author          Kractero
 ==/UserStyle== */
