have blockquote use tertiary

--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -205,7 +205,7 @@
 
     #cardauctiontable td.auction-self-matched,
     .entity_selector .ui-menu,
-    .even {
+    .even, blockquote {
         background-color: var(--tertiary-background-color) !important;
     }
 
