--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,3 +1,11 @@
+/* ==UserStyle==
+@name           Dark Mod
+@namespace      github.com/Kractero
+@version        0.01
+@description    Modified rift dark style for nationstates
+@author         Kractero
+==/UserStyle== */
+
 @-moz-document domain("nationstates.net") {
 :root {
         --background-color: #1e1e2e;
