Make the recent trades dotted graph modals readalbe

--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Mod
 @namespace      github.com/Kractero
-@version        0.01
+@version        0.02
 @description    Modified rift dark style for nationstates
 @author         Kractero
 ==/UserStyle== */
@@ -328,5 +328,10 @@
     .highcharts-axis-labels span {
         color: var(--text-color) !important;
         fill: var(--text-color) !important;
+    }
+    
+    .highcharts-tooltip > rect {
+        color: var(--tertiary-background-color) !important;
+        fill: var(--tertiary-background-color) !important;
     }
 }
