Make deckcard mv and buyers readalbe

--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Mod
 @namespace      github.com/Kractero
-@version        0.02
+@version        0.03
 @description    Modified rift dark style for nationstates
 @author         Kractero
 ==/UserStyle== */
@@ -206,7 +206,9 @@
 
     #cardauctiontable td.auction-self-matched,
     .entity_selector .ui-menu,
-    .even, blockquote {
+    .even, blockquote,
+    .deckcard-card-buyers,
+    .deckcard-card-mv {
         background-color: var(--tertiary-background-color) !important;
     }
 
