--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Mod
 @namespace      github.com/Kractero
-@version        0.05
+@version        0.06
 @description    Modified rift dark style for nationstates
 @author         Kractero
 ==/UserStyle== */
@@ -134,7 +134,13 @@
     fieldset.wfe .dispatchauthorline a:link,
     fieldset.wfe .dispatchauthorline a:visited,
     a.rlink {
+        color: var(--link-color);
+    }
+    
+    .postprofile a,
+    #page_api_doc a {
         color: var(--link-color) !important;
+        text-shadow: none;
     }
 
     .deckcard-season-1 {
