show forum online status

--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Mod
 @namespace      github.com/Kractero
-@version        0.07
+@version        0.08
 @description    Modified rift dark style for nationstates
 @author         Kractero
 ==/UserStyle== */
@@ -280,7 +280,6 @@
     .newmyregionbubble .newmainlinebubblebottom,
     .newmainlinebubbletop,
     div.nationsummarybox,
-    .inner,
     .topic-actions,
     fieldset.wfe,
     .embassypending,
@@ -344,5 +343,11 @@
     .highcharts-tooltip > rect, .highcharts-series rect {
         color: var(--tertiary-background-color) !important;
         fill: var(--tertiary-background-color) !important;
+    }
+    
+    .online {
+        background-image: url("./styles/prosilver-ns/imageset/en/icon_user_online.gif") !important;
+  background-position: 116px 0 !important;
+  background-repeat: no-repeat !important;
     }
 }
