--- a/dark-mod.user.styl
+++ b/dark-mod.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Mod
 @namespace      github.com/Kractero
-@version        0.09
+@version        0.10
 @description    Modified rift dark style for nationstates
 @author         Kractero
 ==/UserStyle== */
@@ -116,6 +116,10 @@
     #main,
     #banner {
         background: var(--background-color) none;
+    }
+
+    #banner .belspacermain {
+        background-image: none;    
     }
 
     .newflagbox img,
